// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`populateGlobalsFromLib – behavior snapshot > es2018 used globals snapshot stays stable 1`] = `
{
  "variables": {
    "Array": "both",
    "Map": "both",
    "Partial": "type",
    "Promise": "type",
    "Record": "type",
    "Set": "both",
    "T1": {
      "defs": [
        "Type",
      ],
      "variable": "type",
    },
    "T2": {
      "defs": [
        "Type",
      ],
      "variable": "type",
    },
    "arr": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
    "const": "type",
    "foo": {
      "defs": [
        "FunctionName",
      ],
      "variable": "value",
    },
    "map": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
    "promise": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
    "set": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
  },
}
`;

exports[`populateGlobalsFromLib – behavior snapshot > esnext.full used globals snapshot stays stable 1`] = `
{
  "variables": {
    "Array": "both",
    "Map": "both",
    "Partial": "type",
    "Promise": "type",
    "Record": "type",
    "Set": "both",
    "T1": {
      "defs": [
        "Type",
      ],
      "variable": "type",
    },
    "T2": {
      "defs": [
        "Type",
      ],
      "variable": "type",
    },
    "arr": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
    "const": "type",
    "foo": {
      "defs": [
        "FunctionName",
      ],
      "variable": "value",
    },
    "map": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
    "promise": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
    "set": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
  },
}
`;

exports[`populateGlobalsFromLib – behavior snapshot > no-lib baseline snapshot stays stable 1`] = `
{
  "variables": {
    "T1": {
      "defs": [
        "Type",
      ],
      "variable": "type",
    },
    "T2": {
      "defs": [
        "Type",
      ],
      "variable": "type",
    },
    "arr": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
    "const": "type",
    "foo": {
      "defs": [
        "FunctionName",
      ],
      "variable": "value",
    },
    "map": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
    "promise": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
    "set": {
      "defs": [
        "Variable",
      ],
      "variable": "value",
    },
  },
}
`;
